--- a/mujeres.html
+++ b/mujeres.html
@@ -77,21 +77,11 @@
                         <a href="plus50.html" class="nav-item header__five">+50</a>
                         <a href="lgbt.html" class="nav-item header__lgbt">Lgbt</a>
                         <a href="xv.html" class="nav-item header__xv">XV</a>
-                        <a href="mochileros.html" class="nav-item header__mochileros header__mochileros--active">Mochileros</a>
-                        <a href="mujeres.html" class="nav-item header__mujeres">Mujeres</a>
+                        <a href="mochileros.html" class="nav-item header__mochileros">Mochileros</a>
+                        <a href="mujeres.html" class="nav-item header__mujeres header__mujeres--active">Mujeres</a>
                         <a href="teen.html" class="nav-item header__teen">Teen</a>
                         <a href="contacto.html" class="nav-item nav-link">Contacto</a>
 
-                        <!-- <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
-                                <a href="destination.html" class="dropdown-item">Destination</a>
-                                <a href="guide.html" class="dropdown-item">Travel Guides</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
             </nav>
@@ -108,14 +98,14 @@
     <main class="main">
 
          <!-- Header Start -->
-        <div class="container-fluid page-header mochileros">
+        <div class="container-fluid page-header mujeres">
             <div class="container">
                 <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 400px">
-                    <h3 class="display-4 text-white text-uppercase">Mochileros</h3>
+                    <h3 class="display-4 text-white text-uppercase">Mujeres</h3>
                     <div class="d-inline-flex text-white">
                         <p class="m-0 text-uppercase"><a class="text-white" href="">Inicio</a></p>
                         <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                        <p class="m-0 text-uppercase">mochileros</p>
+                        <p class="m-0 text-uppercase">mujeres</p>
                     </div>
                 </div>
             </div>
@@ -175,22 +165,22 @@
                 <div class="row">
                     <div class="col-lg-6" style="min-height: 500px;">
                         <div class="position-relative h-100">
-                            <img class="position-absolute w-100 h-100" src="img/mochilero1.webp" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="img/mujeres1.jpg" style="object-fit: cover;">
                         </div>
                     </div>
                     <div class="col-lg-6 pt-5 pb-lg-5">
                         <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
-                            <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Mochileros</h6>
-                            <h1 class="mb-3">Únase solo, viaje juntos</h1>
-                            <p>Sabemos que nada supera la sensación de máxima libertad que te brinda viajar en solitario. Es una oportunidad de explorar el mundo en tus propios términos, establecer tu propio rumbo y embarcarte en tu viaje personal.
-                                Dicho esto, sabemos que viajar se trata de las personas que conoces, los personajes locales que conoces, los nuevos mejores amigos que conoces y que cambian tu vida para siempre. 
+                            <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Mujeres</h6>
+                            <h1 class="mb-3">Enamorate de tu personalidad</h1>
+                            <p>Queremos regalarte experiencias que dejen huellas en tu alma y llenen el baúl de los recuerdos más queridos, en destinos que nos conquisten por sus más profundas tradiciones, gastronomía, paisajes e historia.
+                                Todo esto, lo hacemos mediante viajes organizados con otras mujeres que se sienten igual que tú. Aquí, jamás te sentirás sola.
                             </p>
                             <div class="row mb-4">
                                 <div class="col-6">
-                                    <img class="img-fluid" src="img/mochileros2.webp" alt="">
+                                    <img class="img-fluid" src="img/mujeres2.jpeg" alt="">
                                 </div>
                                 <div class="col-6">
-                                    <img class="img-fluid" src="img/mochileros3.jpeg" alt="">
+                                    <img class="img-fluid" src="img/mujeres3.jpg" alt="">
                                 </div>
                             </div>
                             <a href="" class="btn btn-primary mt-1">Llamanos</a>
