--- a/cumpleaños.html
+++ b/cumpleaños.html
@@ -72,15 +72,15 @@
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
-                        <a href="bodas.html" class="nav-item nav-link">Bodas</a>
-                        <a href="cumpleaños.html" class="nav-item nav-link active">Cumpleaños</a>
-                        <a href="plus50.html" class="nav-item nav-link">+50</a>
-                        <a href="lgbt.html" class="nav-item nav-link">Lgbt</a>
-                        <a href="xv.html" class="nav-item nav-link">XV</a>
-                        <a href="/mochileros.html" class="nav-item nav-link">Mochileros</a>
-                        <a href="#" class="nav-item nav-link">Mujeres</a>
-                        <a href="#" class="nav-item nav-link">Teen</a>
-                        <a href="/contacto.html" class="nav-item nav-link">Contacto</a>
+                        <a href="bodas.html" class="nav-item header__bodas">Bodas</a>
+                        <a href="cumpleaños.html" class="nav-item header__cumpleaños header__cumpleaños--active">Cumpleaños</a>
+                        <a href="plus50.html" class="nav-item header__five">+50</a>
+                        <a href="lgbt.html" class="nav-item header__lgbt">Lgbt</a>
+                        <a href="xv.html" class="nav-item header__xv">XV</a>
+                        <a href="mochileros.html" class="nav-item header__mochileros">Mochileros</a>
+                        <a href="mujeres.html" class="nav-item header__mujeres">Mujeres</a>
+                        <a href="teen.html" class="nav-item header__teen">Teen</a>
+                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
 
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
